=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

Breaking Changes
----------------

Changes
-------

Fixes
-----

 - Fixed the SQL query in the Tutorial plugin.

 - Fix timestamp formatting in the console results.

2017/07/10 1.4.0
================

Changes
-------

 - Display user name in the status bar when the Enterprise
   Edition is enabled.

2017/07/07 1.3.3
================

Fixes
-----

 - Cluster warning within the monitoring plugin, regarding
   stat collection being disabled, has been improved.

2017/07/07 1.3.2
================

Fixes
-----

 - Redirect to /401 when the admin-ui user does not have cluster privileges.

 - Expanded the list of keywords used by autocapitalization.

 - Fix toggle buttons UI, which was broken while zooming.

 - Change color of keywords in the console to be more readable.

 - Display long table names correctly.

2017/04/24 1.3.1
================

Fixes
-----

 - Licence ident wording has been corrected.

2017/04/18 1.3.0
================

 - License ident is now displayed in the Enterprise Edition.

2017/04/12 1.2.3
================

 - Fixed ``y-axis`` number formating for long running queries
   in the monitoring plugin.

2017/03/28 1.2.2
================

 - Added ``ms`` to monitoring graph title.

 - Fixed issue where arrays in formatted objects were not displayed.

2017/03/27 1.2.1
================

 - Removed blog feed from side bar.

 - Increase base font size.

 - Fixed issue that caused tables to display a healthy status even though their
   partitions were in critical state

 - Added fallback to unformatted results if no column types are returned.

 - Display notification warning only when a new CrateDB version is released.

 - Added ``lineWrapping`` option to console Editor.

 - Fixed issue that cause the console text to appear on top of the settings tab.

 - Fixed load reading display when the readings were invalid (for example, on